--- a/css/media.css
+++ b/css/media.css
@@ -29,8 +29,29 @@
   }
 }
 
-@media (max-width: 484px) {
-  #header .container {
-    padding-inline: 0;
+@media (max-width: 992px) {
+  .trend-main .trend-card:last-child {
+    display: none;
+  }
+}
+
+@media (max-width: 745px) {
+  .trend-title-img img,
+  .trend-title-img h3 {
+    max-width: 80px;
+    height: 80px;
+  }
+}
+
+@media (max-width: 498px) {
+  .trend-main .trend-card:nth-child(2) {
+    display: none;
+  }
+  .trend-main .trend-card {
+    width: 100%;
+  }
+  .trend-main{
+    flex-direction: column;
+    align-items: center;
   }
 }
