--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ body {
   }
   @media (max-width: 640px) {
     max-width: 475px;
-    padding: 0;
+    padding: 0 20px;
   }
   @media (max-width: 475px) {
     max-width: 350px;
@@ -79,6 +79,10 @@ button {
 }
 #header .container {
   padding-inline: 40px;
+
+  @media (max-width: 484px) {
+    padding-inline: 0;
+  }
 }
 .header {
   display: flex;
@@ -136,8 +140,8 @@ button {
   border-radius: 20px;
   max-width: 460px;
 }
-.main-text .main-img{
-    display: none;
+.main-text .main-img {
+  display: none;
 }
 .main-img .img-1 {
   width: 100%;
@@ -154,3 +158,77 @@ button {
   gap: 10px;
 }
 /* ? main */
+
+/*? trend */
+#trend {
+  padding-block: 50px;
+}
+
+.trend {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+.trend-title {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.trend-main {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.trend-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+.trend-card img {
+  max-width: 330px;
+  width: 100%;
+}
+.trend-title-img img {
+  max-width: 100px;
+  width: 100%;
+  height: 100px;
+}
+.trend-ava img {
+  max-width: 24px;
+  width: 100%;
+}
+
+.trend-card-title {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 15px;
+}
+.trend-title-img {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+.trend-title-img h3 {
+  max-width: 100px;
+  width: 100%;
+  height: 100px;
+  background: #a259ff;
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.trend-ava {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 30%;
+}
+
+/*? trend */
