--- a/css/style.css
+++ b/css/style.css
@@ -228,7 +228,7 @@ button {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 30%;
+  width: 90px;
 }
 
 /*? trend */
