--- a/css/media.css
+++ b/css/media.css
@@ -41,7 +41,7 @@
     max-width: 80px;
     height: 80px;
   }
-  .trend-ava{
+  .trend-ava {
     width: 70px;
   }
 }
@@ -51,9 +51,18 @@
     display: none;
   }
   .trend-main .trend-card {
+    max-width: 330px;
     width: 100%;
   }
-  .trend-main{
+  .trend-card img {
+    width: 100%;
+  }
+  .trend-title-img img,
+  .trend-title-img h3 {
+    max-width: 100px;
+    height: 100px;
+  }
+  .trend-main {
     flex-direction: column;
     align-items: center;
   }
