--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
   font-family: Work Sans, sans-serif;
   text-decoration: none;
   color: #fff;
-  outline: 1px solid blue;
+  /* outline: 1px solid blue; */
 }
 body {
   background: #2b2b2b;
