--- a/css/style.css
+++ b/css/style.css
@@ -232,3 +232,81 @@ button {
 }
 
 /*? trend */
+
+/*? creator */
+#creator {
+  padding-block: 50px;
+}
+.creator {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 40px;
+}
+.creator-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;  
+  width: 100%;
+}
+.creator-top-title {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  align-items: start;
+}
+.creator button {
+  background: none;
+  border: 1px solid #a259ff;
+}
+.creator button ion-icon{
+  color: #a259ff;
+}
+
+.creator-main {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: space-between;
+}
+
+.creator-card {
+  width: 260px;
+  height: 238px;
+  border-radius: 20px;
+  background: #3b3b3b;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  padding: 12px 20px;
+  position: relative;
+  text-align: center;
+}
+.number {
+  width: 24px;
+  height: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #2B2B2B;
+  border-radius: 50%;
+  position: absolute;
+  left: 20px;
+  top: 20px;
+  font-weight: 400;
+  color: #ffffff85;
+}
+
+.creator-card-title{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.creator-card-title span{
+  color: #ffffff92;
+}
+.view-rank{
+  display: none;
+}
+/*? creator */
