--- a/css/media.css
+++ b/css/media.css
@@ -35,6 +35,7 @@
   }
   .creator-card {
     max-width: 330px;
+    width: 100%;
     height: 100px;
     flex-direction: row;
   }
@@ -52,6 +53,15 @@
   .creator-card img {
     width: 60px;
     height: 60px;
+  }
+  .creator-card-title {
+    text-align: left;
+  }
+  .creator-card-title h3 {
+    font-size: 20px;
+  }
+  .creator-card-title p {
+    font-size: 18px;
   }
 }
 
@@ -79,8 +89,8 @@
     font-size: 11px;
   }
   .number {
-    left: 60px;
-    top: 13px;
+    left: 49px;
+    top: 19px;
   }
   .creator-main {
     justify-content: center;
@@ -134,7 +144,13 @@
 
 @media (max-width: 475px) {
   .number {
-    left: 46px;
-    top: 18px;
+    left: 27px;
+    top: 19px;
+  }
+}
+
+@media (max-width: 769px) {
+  .creator-main {
+    justify-content: center;
   }
 }
