--- a/css/style.css
+++ b/css/style.css
@@ -246,7 +246,7 @@ button {
 .creator-top {
   display: flex;
   justify-content: space-between;
-  align-items: center;  
+  align-items: center;
   width: 100%;
 }
 .creator-top-title {
@@ -259,7 +259,7 @@ button {
   background: none;
   border: 1px solid #a259ff;
 }
-.creator button ion-icon{
+.creator button ion-icon {
   color: #a259ff;
 }
 
@@ -289,7 +289,7 @@ button {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #2B2B2B;
+  background: #2b2b2b;
   border-radius: 50%;
   position: absolute;
   left: 20px;
@@ -298,15 +298,45 @@ button {
   color: #ffffff85;
 }
 
-.creator-card-title{
+.creator-card-title {
   display: flex;
   flex-direction: column;
   gap: 10px;
 }
-.creator-card-title span{
+.creator-card-title span {
   color: #ffffff92;
 }
-.view-rank{
+.view-rank {
   display: none;
 }
 /*? creator */
+
+/*? browse */
+#browse {
+  padding-block: 50px;
+}
+.browse {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 25px;
+}
+.browse-main {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 20px;
+}
+.browse-box {
+  width: 257px;
+  background: #3b3b3b;
+  border-radius: 20px;
+}
+.browse-box img {
+  width: 100%;
+}
+.browse-title {
+  padding: 20px 30px;
+
+}
+/*? browse */
