--- a/css/media.css
+++ b/css/media.css
@@ -77,6 +77,14 @@
   .works-title p {
     font-size: 12px;
   }
+
+  .footer-top{
+    flex-direction: column;
+  }
+  .footer-btn-inp button{
+    height: 60px;
+  }
+
 }
 
 @media (max-width: 745px) {
@@ -167,6 +175,22 @@
   }
   .join {
     flex-direction: column;
+  }
+  .footer-btn-inp {
+    position: static;
+    flex-direction: column;
+    gap: 15px;
+  }
+  .footer-btn-inp input,
+  .footer-btn-inp button {
+    width: 100%;
+    height: 40px;
+  }
+  .footer-btn-inp button {
+    position: static;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
 @media (max-width: 498px) {
@@ -266,7 +290,7 @@
     gap: 15px;
   }
   .btn-inp input,
-  button {
+  .btn-inp button {
     width: 100%;
     height: 40px;
   }
