--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,7 @@ button {
   align-items: center;
   justify-content: space-between;
 }
-.header img {
+.logo {
   max-width: 260px;
 }
 .header nav {
@@ -539,3 +539,67 @@ button {
 }
 
 /*? join */
+
+/*? footer */
+#footer{
+  padding-block: 30px;
+}
+
+.footer-top{
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 40px;
+  gap: 15px;
+}
+
+.footer-1{
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 15px;
+}
+
+.footer-top .footer-1:first-child{
+  width: 250px;
+}
+
+.footer-1 p{
+  color: #CCCCCC;
+font-size: 16px;
+}
+
+.footer-icons ion-icon{
+  color: #CCCCCC;
+  font-size: 32px;
+}
+
+.footer-bottom{
+  padding-top: 40px;
+  border-top: 1px solid #ffffffbc;
+
+}
+
+.footer-btn-inp {
+  max-width: 420px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+.footer-btn-inp input {
+  width: 100%;
+  height: 60px;
+  border-radius: 20px;
+  padding-left: 25px;
+  /* z-index: -1000; */
+}
+.footer-btn-inp button {
+  z-index: 1000;
+  position: absolute;
+  right: 0;
+}
+
+
+
+
+/*? footer */
